# mod-hub

./: Cargo.toml  README.md  debug_universe.py  test_dll.py  test_structure_writing.py  test_universe.py  universe_lib.py
.cargo/: config.toml
.claude/: settings.local.json
.kiro/specs/universe-modding-framework/: design.md  requirements.md  tasks.md
docs/: OVERLAY.md
src/: analysis.rs  config.rs  core.rs  errors.rs  ffi.rs  ffi_asm.rs  hook_handlers.rs  hooks.rs  lib.rs  logging.rs  main.rs  memory.rs  overlay.rs  pattern.rs  pointers.rs  python_interface.rs  python_runtime.rs  registers.rs  vtable.rs  winapi.rs
src/hooks/: mod.rs
src/overlay/: d3d.rs  dcomp.rs  mod.rs  painter_d3d.rs  util.rs  win.rs
src/overlay/shaders/: egui_ps.hlsl  egui_vs.hlsl
