[package]
name = "mod-hub"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.1", features = ["extension-module", "abi3-py314", "auto-initialize"] }
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_SystemServices",
    "Win32_System_ProcessStatus",
    "Win32_System_Kernel"
] }
libc = "0.2"
lazy_static = "1.5.0"
