[package]
name = "restident_evil_5"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
egui = "0.32.0"
egui-winit = "0.32.0"
egui-wgpu = "0.32.0"
wgpu = "25.0.2"
pollster = "0.4.0"
ilhook = "2.1.2"
thiserror = "2.0.12"
windows-sys = { version = "0.60.2", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse"
] }
winit = "0.30.12"
raw-window-handle = "0.6"
