[package]
name = "restident_evil_5"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
egui = "0.32.0"
ilhook = "2.1.2"
thiserror = "2.0.12"
log = "0.4"
simplelog = "0.12"
windows = { version = "0.60.0", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Gdi",
    "Win32_UI_Controls",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse"
] }
